--- a/src/Stylesheets/DocumentModal.css
+++ b/src/Stylesheets/DocumentModal.css
@@ -32,8 +32,3 @@
 
 .w3-green,.w3-hover-green:hover{color:#fff!important;background-color:#82b440;}
 .w3-text-green,.w3-hover-text-green:hover{color:inherit;}
-
-.checkboxes {
-  border-style: solid;
-  border-color: red;
-}
