--- a/src/Stylesheets/Profile.css
+++ b/src/Stylesheets/Profile.css
@@ -38,3 +38,134 @@
 .document-delete-button {
   display: inline-block;
 }
+
+/* Form */
+
+	#profile-edit input[type="text"],
+	#profile-edit input[type="password"],
+	#profile-edit input[type="email"],
+	#profile-edit textarea {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-o-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		background: none;
+		border: solid 3px #82b440;
+		color: inherit;
+		display: block;
+		outline: 0;
+		padding: 0.75em;
+		text-decoration: none;
+		width: 60%;
+    margin-left: 0px;
+	}
+
+		input[type="text"]:focus,
+		input[type="password"]:focus,
+		input[type="email"]:focus,
+		textarea:focus {
+			border-color: #82b440;
+		}
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"] {
+		line-height: 1em;
+	}
+
+	::-webkit-input-placeholder {
+		color: inherit;
+		opacity: 0.5;
+		position: relative;
+		top: 3px;
+	}
+
+	:-moz-placeholder {
+		color: inherit;
+		opacity: 0.5;
+	}
+
+	::-moz-placeholder {
+		color: inherit;
+		opacity: 0.5;
+	}
+
+	:-ms-input-placeholder {
+		color: inherit;
+		opacity: 0.5;
+	}
+
+	.formerize-placeholder {
+		color: rgba(85, 85, 85, 0.5) !important;
+	}
+
+
+  /*Profile Buttons*/
+
+  input[type="submit"],
+  input[type="reset"],
+  input[type="button"],
+  .profile-button {
+  	-moz-appearance: none;
+  	-webkit-appearance: none;
+  	-o-appearance: none;
+  	-ms-appearance: none;
+  	appearance: none;
+  	background: none;
+  	border-radius: none;
+  	border: 2px solid;
+  	border-color: #82b440;
+  	color: #82b440;
+  	cursor: pointer;
+  	display: inline-block;
+  	padding: 0.90em 1.2em;
+  	letter-spacing: 1px;
+  	text-align: center;
+  	text-decoration: none;
+  	text-transform: uppercase;
+  	font-size: .9em;
+  	-moz-transition: all 0.35s ease-in-out;
+  	-webkit-transition: all 0.35s ease-in-out;
+  	-o-transition: all 0.35s ease-in-out;
+  	-ms-transition: all 0.35s ease-in-out;
+  	transition: all 0.35s ease-in-out;
+  }
+
+  	input[type="submit"]:hover,
+  	input[type="reset"]:hover,
+  	input[type="button"]:hover,
+  	.profile-button:hover {
+  		background: #82b440;
+  		color: white;
+  	}
+
+  	input[type="submit"].alt,
+  	input[type="reset"].alt,
+  	input[type="button"].alt,
+  	.profile-button.alt {
+  		border-color: inherit;
+  		color: inherit;
+  	}
+
+  		input[type="submit"].alt:hover,
+  		input[type="reset"].alt:hover,
+  		input[type="button"].alt:hover,
+  		.profile-button.alt:hover {
+  			background: white;
+  			color: #82b440;
+  		}
+
+  	input[type="submit"].fit,
+  	input[type="reset"].fit,
+  	input[type="button"].fit,
+  	.profile-button.fit {
+  		width: 100%;
+  	}
+
+  	input[type="submit"].small,
+  	input[type="reset"].small,
+  	input[type="button"].small,
+  	.profile-button.small {
+  		font-size: 0.8em;
+  	}
