--- a/src/Stylesheets/Quiz.css
+++ b/src/Stylesheets/Quiz.css
@@ -1,5 +1,6 @@
 #quiz {
 	background-color: #82b440;
+	width: 65%;
 }
 	fieldset, legend {
 		color: black;
